Icons misalignment fix (card-header)

--- a/src/scss/_icon-fix.scss
+++ b/src/scss/_icon-fix.scss
@@ -3,7 +3,7 @@
  * Problem with misalignment comes up with Buefy update 0.8.x
  */
 
-.button, nav.navbar {
+.button, nav.navbar, .card-header-title {
   .icon {
     i {
       height: inherit;
